--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Week1</title>
+    <title>Home Page for in class exercises.</title>
 </head>
 <body>
-    <h1>Wouldnt you like to be a pepper too???</h1>
+    <h1>Welcome to main page for HTML/JavaScript</h1>
+    <a href="/week1/index.html">link to week 1 folder</a>
 </body>
 </html>
