--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Welcome to main page for HTML/JavaScript</h1>
-    <a href="/week1/index.html">link to week 1 folder</a>
+    <a href="/week1/index.html">link to week 1 Folder</a>
+    <a href="week2/index.html">Link to Week 2 Folder</a>
 </body>
 </html>
