--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Welcome to main page for HTML/JavaScript</h1>
          <ul>
-        <a href="/week1/index.html">link to week 1 Folder</a>
-        <a href="week2/index.html">Link to Week 2 Folder</a> 
+            <li> <a href="/week1/index.html">link to week 1 Folder</a></li>
+            <li> <a href="week2/index.html">Link to Week 2 Folder</a></li>
         </ul>
     
 </body>
